# Iris_Classification_App

./: .gitignore  Procfile  pyproject.toml  requirements.txt
.history/: pyproject_20220115061611.toml
iris/: app.py  classifier.py  decisiontreeclassifier.pkl
iris/static/styles/: styles.css
iris/templates/: index.html
tests/: test_iris.py
