[tool.poetry]
name = "Iris"
version = "0.1.0"
description = ""
authors = ["Kobiri <kobiris1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
numpy = "^1.22.1"
sklearn = "^0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
